using Microsoft.AspNetCore.Identity;

namespace Studenda.Core.Server.Security.Data;

public class Account : IdentityUser;